[workspace]
members = ["crates/*"]
resolver = "2"

# This sub-workspace is intentionally excluded from the parent
# yellowstone-vixen workspace (see ../../Cargo.toml `exclude`). It pins its
# own dependency versions so that `mev-radar` can iterate independently of
# the Vixen release cycle.

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/senzenn/yellowstone-vixen"
publish = false

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
dirs = "5.0"

yellowstone-grpc-client = "12"
yellowstone-grpc-proto = { version = "12", default-features = false }

mev-radar-core = { path = "crates/core", version = "0.1.0" }
mev-radar-dex = { path = "crates/dex", version = "0.1.0" }
mev-radar-pools = { path = "crates/pools", version = "0.1.0" }
mev-radar-arb = { path = "crates/arb", version = "0.1.0" }
mev-radar-sandwich = { path = "crates/sandwich", version = "0.1.0" }
mev-radar-replay = { path = "crates/replay", version = "0.1.0" }
mev-radar-tui = { path = "crates/tui", version = "0.1.0" }

# Pulled directly from the parent yellowstone-vixen workspace so this
# example tracks the local Vixen sources without a published-crate hop.
yellowstone-vixen-core = { path = "../../crates/core", default-features = false }

bs58 = "0.5"
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
prost = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
