[package]
name = "mev-radar-arb"
description = "Cross-pool spread detector for mev-radar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
mev-radar-dex = { workspace = true }
mev-radar-pools = { workspace = true }
