[package]
name = "mev-radar-core"
description = "Core gRPC subscribe loop, config, and shared types for mev-radar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-vixen-core = { workspace = true }
mev-radar-arb = { workspace = true }
mev-radar-dex = { workspace = true }
mev-radar-pools = { workspace = true }
mev-radar-replay = { workspace = true }
mev-radar-sandwich = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
