[package]
name = "mev-radar-replay"
description = "Stream record + replay for mev-radar (length-prefixed prost SubscribeUpdates)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
