[package]
name = "mev-radar-sandwich"
description = "Sandwich-MEV pattern classifier for mev-radar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
mev-radar-dex = { workspace = true }
