[package]
name = "mev-radar-tui"
description = "ratatui dashboard for mev-radar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
mev-radar-arb = { workspace = true }
mev-radar-dex = { workspace = true }
mev-radar-pools = { workspace = true }
mev-radar-sandwich = { workspace = true }
